--- a/styles.css
+++ b/styles.css
@@ -1,104 +1,71 @@
+@font-face {
+  font-family: 'Liver';
+  src: url('font/Liver.woff2');
+}
+
+@font-face {
+  font-family: 'Liver-mono';
+  src: url('font/Liver_mono.woff2');
+}
+
+:root {
+  --foreground: #fff;
+  --background: #000;
+}
+
 * {
-    margin: 0px;
+  font-family: 'Liver';
+  line-height: 1;
+  color: var(--foreground);
+  background: var(--background);
 }
 
-body {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    padding: 0px;
+h1, h2, h3 {
+  text-align: center;
 }
 
-.spacer {
-    display: flex;
-    flex-grow: 1;
+hr {
+  height: 1px;
+  border: 0;
+  background: var(--foreground);
 }
 
-.nerc {
-    margin:5px;
-    display: flex;
-    padding: 0px;
+img, video {
+  display: block;
+  max-width: 100%;
+  margin: auto;
 }
 
-#container {
-    display: flex;
-    flex-direction: column;
-    height:100vh;
-    padding: 5px;
-    width: 1024px;
-    margin: auto;
+p {
+  margin: 24px;
+  font-size: 16pt;
 }
 
-#links {
-    padding-left:  8px;
-    padding-right: 8px;
+ul, ol {
+  margin: 24px;
+  padding: 0 0 0 12px;
 }
 
-#header {
-    padding-left: 8px;
-}
-#header h1 {
-    display: block;
-    margin-top: auto;
-    margin-right: 20px;
-}
-#header h2 {
-    display: block;
-    margin-top: auto;
+li {
+  font-size: 14pt;
+  margin: 6px;
 }
 
-#body {
-    width: 100%;
-    display:flex;
-    flex-grow: 1;
-    flex-direction: row;
+content {
+  max-width: 800px;
+  margin: 64px auto;
+  border: 4px solid var(--foreground);
+  padding: 8px;
 }
 
-#sidebar {
-    display: block;
-    left: 0px;
-    padding-top:  20px;
-    padding-left: 40px;
-    min-width:200px;
-    flex-shrink:0;
-}
-#sidebar ul li {
-    padding-left: 8px;
-    font-size: 14pt;
-    display: list-item;
-    align-items: center;
+#contact {
+  margin: 24px;
 }
 
-#content {
-    display: block;
-    flex-grow: 1;
-    padding-left: 80px;
-    padding-right: 80px;
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-#content h1 {
-    display: block;
-    text-align: center;
-    border-bottom: 1px solid black;
-    margin-bottom: 24px;
-}
-#content p {
-    text-indent: 1.5em;
-    display: block;
-    max-width: 800px;
-    margin: auto;
-}
-#content img {
-    display: block;
-    width: 100%;
-    height: auto;
-    margin: auto;
+.cat {
+  background: #888;
 }
 
-#footer {
-    padding-left:8px;
-    padding-right: 8px;
+.sep {
+  background: #333;
 }
