--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ li {
   margin: 6px;
 }
 
-content {
+container {
   max-width: 800px;
   margin: 64px auto;
   border: 4px solid var(--foreground);
